Adds ion-back-button

--- a/src/app/user-data/user-data.page.html
+++ b/src/app/user-data/user-data.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>userData</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="users"></ion-back-button>
+    </ion-buttons>
+    <ion-title>user's detail</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>User detail</h1>
+  <h1>User's detail</h1>
+
 </ion-content>
