--- a/src/app/user-data/user-data.page.html
+++ b/src/app/user-data/user-data.page.html
@@ -3,11 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="users"></ion-back-button>
     </ion-buttons>
-    <ion-title>user's detail</ion-title>
+    <ion-title>users detail {{userId}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>User's detail</h1>
-
+  <h1>User's detail {{userId}}</h1>
+  <ion-list>
+    <ion-item routerLink="/users/0/detail">0</ion-item>
+    <ion-item routerLink="/users/4/detail">4</ion-item>
+  </ion-list>
 </ion-content>
