--- a/src/app/user-data/user-data.page.html
+++ b/src/app/user-data/user-data.page.html
@@ -3,11 +3,33 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="users"></ion-back-button>
     </ion-buttons>
-    <ion-title>users detail {{userId}}</ion-title>
+    <ion-title>users detail ok</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <h1>User's detail {{user | json}}</h1>
 
+<ion-content class="ion-padding ion-text-center">
+  <ion-card *ngIf="user">
+
+    <img [src]="user.picture.medium" alt="{{user.name.title }}">
+    <ion-card-header>
+      <ion-card-title>
+        {{user.name.title }}  {{user.name.first }}    {{user.name.last }}
+      </ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-list-header>User's data</ion-list-header>
+        <ion-item>
+          <ion-icon color="danger" name="call" slot="start"></ion-icon>
+          <ion-label>{{user.phone}}</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon color="danger" name="at-outline" slot="start"></ion-icon>
+          <ion-label>{{user.email}}</ion-label>
+        </ion-item>
+      </ion-list>
+
+    </ion-card-content>
+  </ion-card>
 </ion-content>
