--- a/src/app/user-data/user-data.page.html
+++ b/src/app/user-data/user-data.page.html
@@ -7,11 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-
 <ion-content class="ion-padding ion-text-center">
   <ion-card *ngIf="user">
 
-    <img [src]="user.picture.medium" alt="{{user.name.title }}">
+    <img [src]="user.picture.medium" alt="">
     <ion-card-header>
       <ion-card-title>
         {{user.name.title }}  {{user.name.first }}    {{user.name.last }}
@@ -29,7 +28,46 @@
           <ion-label>{{user.email}}</ion-label>
         </ion-item>
       </ion-list>
-
+      <ion-grid>
+        <ion-row>
+          <ion-col class="ion-text-center">
+            <ion-text color="primary">User's data</ion-text>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-item>
+              <ion-icon color="danger" name="call" slot="start"></ion-icon>
+              <ion-label>{{user.phone}}</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="2" size-md="2">
+            <ion-item>
+              <ion-icon color="danger" name="at-outline" slot="start"></ion-icon>
+              <ion-label>{{user.email}}</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-icon color="danger" name="at-outline" slot="start"></ion-icon>
+              <ion-label>{{user.email}}</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col>
+            <ion-item>
+              <ion-icon color="danger" name="at-outline" slot="start"></ion-icon>
+              <ion-label>{{user.nat}}</ion-label>
+            </ion-item>
+          </ion-col>
+          <ion-col size="auto">
+            <ion-item>
+              <ion-icon color="danger" name="at-outline" slot="start"></ion-icon>
+              <ion-label>{{user.dob.date.toLocaleString()}}</ion-label>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-card-content>
   </ion-card>
+
 </ion-content>
